--- a/pages/integrate/vue-component.mdx
+++ b/pages/integrate/vue-component.mdx
@@ -2,7 +2,7 @@ import { Tabs } from 'nextra/components';
 
 ## Vue Component
 
-This section you will learn how to render the Semaphor dashboard into your Vue app. We assume that you already have an existing Vue app, or you can follow the instructions [here](https://vitejs.dev/guide/#scaffolding-your-first-vite-project) to bootstrap one.
+This section outlines the process to render the Semaphor dashboard into your Vue app. We assume that you already have an existing Vue app set up, or you can follow the instructions [here](https://vitejs.dev/guide/#scaffolding-your-first-vite-project) to bootstrap one quickly.
 
 ### 1) Install Semaphor Package
 
