--- a/pages/concepts/filters.mdx
+++ b/pages/concepts/filters.mdx
@@ -4,13 +4,13 @@
 
 Semaphor supports two types of filters: **On-click filter** and **Top-level filter**.
 
-The **On-click** filter is activated when a user clicks on an element in a chart, such as a bar in a bar chart. By default, the on-click filter passes the `X-axis` field/value (and `Y-axis` for vertical orientation) to all the subscribing cards. On-click filter is ideal for progressive filtering and drill-downs. You have the option to enable or disable this interaction in the explorer view.
+The **On-click** filter is applied when a user clicks a chart element, such as a bar in a bar chart. By default, the on-click action filters by `X-axis` field/value (and `Y-axis` for vertical orientation) for subscribing cards. This type of filter is ideal for cross-card filtering and drill-downs. You have the option to enable or disable this interaction in the explorer view.
 
-The **Top-Level filters**, as the name suggests, are located at the top of the dashboard. They are best suited for continuous data types, such as dates and numbers.
+The **Top-Level filter** is defined at the top of the dashboard. It becomes a part of your dashboard definition. They are best suited for filtering by continuous data types, such as dates and numbers.
 
-You can set up a filter subscription on the card query using the handlebar syntax `{{ }}`. Currently, we offer two filter functions, `{{ filters | where }}` and `{{ filters | and }}` as a shorthand for the `WHERE` and `AND` clauses, respectively.
+You can set up a filter subscription for your cards using a handlebar syntax `{{ }}`. Currently, we offer two filter functions, `{{ filters | where }}` and `{{ filters | and }}` as a shorthand for the `WHERE` and `AND` clauses.
 
-As an example, the query below represents a card SQL which counts orders by cities.
+For instance, the query below represents a card SQL which counts orders by cities.
 
 ```sql {2} filename="Card SQL"
 SELECT city, COUNT(*) FROM sales_data
@@ -20,16 +20,16 @@ ORDER BY city DESC LIMIT 50
 
 ```
 
-When the user applies the filters either by clicking on a chart element or selecting a value in the top-level filter, the query is resolved as follows.
+You can pass this filter either by clicking the chart element or selecting a value in the top-level filter. Semaphor resolves this query as below:
 
-```sql {2} filename="Filter SQL"
+```sql {2} filename="Resolved Query"
 SELECT city, COUNT(*) FROM sales_data
 WHERE city = 'Albuquerque' AND discount IN (0.2)
 GROUP BY city
 ORDER BY city DESC LIMIT 50
 ```
 
-Note that `{{ filters | where }}` function is replaced by a `WHERE` clause, which performs `AND` operation on the incoming `city` and `discount` filter values. You can use this filter when your card SQL **does not** contain a `WHERE` clause.
+Notice that `{{ filters | where }}` function is replaced by a `WHERE` clause, which performs `AND` operation on the incoming `city` and `discount` filter values. You can use this filter when your card SQL **DOES NOT** already contain a `WHERE` clause.
 
 However, if your base query already contains a `WHERE` clause as shown below, you can use the `{{ filters | and }}` function to append the incoming filter values to the existing `WHERE` clause.
 
@@ -43,7 +43,7 @@ ORDER BY city DESC LIMIT 50
 
 When the user selects 20% `discount` from the top-level filter, the card SQL resolves as following:
 
-```sql {2} filename="Filter SQL"
+```sql {2} filename="Resolved Query"
 SELECT city, COUNT(*) FROM sales_data
 WHERE city = 'Albuquerque' AND discount IN (0.2)
 GROUP BY city
@@ -99,7 +99,7 @@ ORDER BY city DESC LIMIT 50
 
 Now, when the user fitlers by `discount` the card query resolves as below:
 
-```sql {2} filename="Filter SQL"
+```sql {2} filename="Resolved Query"
 SELECT city, COUNT(*) FROM sales_data
 WHERE discount > 0.2
 GROUP BY city
@@ -120,7 +120,7 @@ ORDER BY city DESC LIMIT 50
 
 Now, when the user fitlers by `discount` the card query resolves as below:
 
-```sql {2} filename="Filter SQL"
+```sql {2} filename="Resolved Query"
 SELECT city, COUNT(*) FROM sales_data
 WHERE c.discount > 0.2
 GROUP BY city
@@ -142,7 +142,7 @@ ORDER BY city DESC LIMIT 50
 
 This will resolve to the following query. Note that `discount` field is absent from the `WHERE` clause.
 
-```sql {2} filename="Filter SQL"
+```sql {2} filename="Resolved Query"
 SELECT city, COUNT(*) FROM sales_data
 WHERE city IN ('Albuquerque', 'Alexandria') AND segment IN ('Corporate')
 GROUP BY city
