--- a/pages/concepts/visuals.mdx
+++ b/pages/concepts/visuals.mdx
@@ -237,7 +237,7 @@ DESC LIMIT 100
 
 ### Pyramid / Tornado Chart
 
-If you want do visualize two cohors side by side for a set of categories, you can create a pyramid chart using the following query structure.
+If you want to visualize two cohors side by side for a set of categories, you can create a pyramid chart using the following query structure.
 
 ```sql filename="Card SQL"
 SELECT category, ship_mode, COUNT(*)
