--- a/pages/connections.mdx
+++ b/pages/connections.mdx
@@ -77,7 +77,7 @@ SELECT * from s3
 
 ### PostgreSQL
 
-You can connect PostgreSQL using a simple connection string as below:
+You can connect to PostgreSQL using the connection string format shown below:
 
 ```markdown copy filename="Connection String"
 postgresql+psycopg2://username:password@server:port/db
